[package]
name = "nest-display"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
lcd = "0.4.1"
lcd-pcf8574 = { git = "https://github.com/Xavientois/lcd-pcf8574" }
rppal-dht11 = "0.4.0"
rppal = { version = "0.13.1", features = ["hal"] }
log = "0.4.16"
env_logger = "0.9.0"
embedded-hal = "0.2.7"
reqwest = { version = "0.11.10", features = ["blocking", "json"] }
serde_json = "1.0.79"
